--- a/src/scss/components/_hp-intro.scss
+++ b/src/scss/components/_hp-intro.scss
@@ -56,7 +56,7 @@
       @include standard-grid();
       width: unset;
       grid-template-rows: min-content;
-      transform: translateY(-6vh);
+      // transform: translateY(-6vh);
     }
 
     .primary-logo {
